# .dotfiles

./: .gitconfig  .gitignore  .marimo.toml  .pre-commit-config.yaml  .zprofile  .zshrc  Cargo.toml  README.md  flake.nix  justfile  package.json
.config/: .harlequin.toml  .oxfmtrc.json  .prettierrc  starship.toml
.config/atuin/: config.toml  init.nu
.config/bat/: config
.config/btop/: btop.conf
.config/fastfetch/: config.jsonc
.config/ghostty/: config
.config/git/: .gitconfig
.config/helix/: config.toml  languages.toml
.config/jj/: config.toml
.config/julia/config/: startup.jl
.config/lazygit/: config.yml
.config/neovim/: autocmds.nix  colorscheme.nix  ftplugin.nix  keymaps.nix  nixpkgs.nix  settings.nix
.config/nix/: flake.nix  shell.nix
.config/nix-darwin/: flake.nix
.config/nix-direnv/: config.toml
.config/nushell/: aliases.nu  carapace.nu  commands.nu  config.nu  env.nu  starship.nu  theme.nu
.config/opencode/: opencode.jsonc  tui.json
.config/oyui/: config.rn
.config/positron/: extensions.txt  settings.json
.config/rumdl/: .rumdl.toml
.config/shell/: .direnvrc  .zprofile  .zshenv  .zshrc
.config/skhd/: skhdrc
.config/yazi/: init.lua  keymap.toml  theme.toml  yazi.toml
.config/zed/: keymap.json  settings.json
.config/zellij/: config.kdl
.dotter/: global.toml  local.toml  macos.toml
.julia/config/: startup.jl
.warp/: keybindings.yaml
docs/: portable-neovim.md
scripts/: .ocamlinit  export-nvim-portable.nu  validate-dotfiles.hs  validate-dotfiles.ml  validate-dotfiles.nu  validate-dotfiles.rs  validate-dotfiles.ts
(+127 files in other folders)
