[package]
name = "dotfiles-scripts"
version = "0.1.0"
edition = "2021"

# This Cargo.toml provides rust-analyzer support for rust-script files.
# The actual dependencies are also declared in each script's header.
# When running scripts, use: rust-script scripts/validate-dotfiles.rs

[[bin]]
name = "validate-dotfiles"
path = "scripts/validate-dotfiles.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
